Some bug fixes on code lines